# matx-to-glsl

./: .gitmodules  CMakeLists.txt  README.md  build.sh  main.cpp
mtlx/: standard_surface_plastic.mtlx  surface.mtlx
